--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@
       next4: {
         location: "棉花田",
         speaker: "馮教官",
-        text: "你們要認真採棉花，這樣就可以賺錢，快去吧。",
+        text: "你們要認真採棉花，這樣就國家才可以賺錢，快去吧。",
         charImg: "Feng.png",
         bg:"cotton fields.png",
         choices: [
